<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_auth_guide_horizontal_50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_auth_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_auth_guide_horizontal_50"
        android:layout_marginBottom="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_auth_header_icon"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.35"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragment_auth_header_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/fragment_auth_header_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="?attr/textAppearanceDisplayMedium"
            app:fontFamily="@font/gluten_regular"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/fragment_auth_header_logo_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_auth_email_input_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/fragment_auth_guide_horizontal_50"
        android:layout_marginHorizontal="32dp"
        app:startIconDrawable="@drawable/envelope">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_auth_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/fragment_auth_email_input_hint_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_auth_password_input_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/fragment_auth_email_input_wrapper"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        app:startIconDrawable="@drawable/lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_auth_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/fragment_auth_password_input_hint_text"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_auth_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_auth_password_input_wrapper"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        style="@style/Widget.Material3.Button"
        android:text="@string/fragment_auth_sign_in_button_text"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_auth_sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_auth_sign_in_button"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:text="@string/fragment_auth_sign_up_button_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>