<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/authFragment"
    xmlns:tools="http://schemas.android.com/tools">

    <fragment
        android:id="@+id/authFragment"
        android:name="com.qubacy.shareit.application.ui.activity._common.page.auth.AuthFragment"
        android:label="AuthFragment"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_authFragment_to_ideaListFragment"
            app:destination="@id/ideaListFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_right_below"
            app:exitAnim="@anim/slide_out_left_above"
            app:popEnterAnim="@anim/slide_in_left_above"
...
